# xgen-maker

./: .env.example  .gitignore  README.ko.md  README.md  maker.config.example.json  maker.ps1  pyproject.toml
scripts/: daily-refresh.cmd  route.py
tests/: test_anchor.py  test_auth.py  test_authz.py  test_branch_naming.py  test_chain.py  test_chat.py  test_checks.py  test_cli_run.py  test_codes.py  test_converge.py  test_cost_act.py  test_deploy.py  test_deploy_render.py  test_dotenv.py  test_engine_stage.py  test_extract_rust_gateway.py  test_git_author.py  test_gitlab_auth.py  test_gitlab_observe.py  test_infra_kg.py  test_kg.py  test_learnings.py  test_loop.py  test_mcp.py  test_observability.py  test_overlay.py  test_pipeline.py  test_pipeline_fetch_worktree.py  test_principle_alignment.py  test_ranking_priors.py  test_regression.py  test_release.py  test_rollback.py  test_sdk_check.py  test_security_hardening.py  test_semantic.py  test_sync.py  test_testenv.py  test_ui_gallery.py  test_ui_verify.py  (+2 more)
xgen_maker/: __init__.py  auth.py  chat.py  cli.py  codes.py  config.py  coverage.py  doctor.py  dotenv.py  engine_provider.py  engine_stage.py  llm.py  mcp_server.py  sdk_check.py  web.py
xgen_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
xgen_maker/kg/: anchor.py  build.py  crossrepo.py  dashboard.py  domains.py  enrich.py  extract_gateway.py  extract_infra.py  extract_python.py  extract_rust.py  extract_typescript.py  graph.py  overlay.py  rank.py  refresh.py  routes_nextjs.py  search.py  source.py  sync.py  tour.py  workspaces.py
(+26 files in other folders)
