[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xgen-maker"
version = "0.1.0"
description = "XGEN MAKER - query-driven dev automation: code knowledge graph + harness loop (query -> branch -> implement -> checks -> judge -> MR)"
requires-python = ">=3.10"

[project.scripts]
maker = "xgen_maker.cli:main"

[tool.setuptools.packages.find]
include = ["xgen_maker*"]
